--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <title>Aswanth Anoop</title>
 
   <!-- Bootstrap -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/bootstrap-theme.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/swiper.min.css">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="bootstrap.min.css" rel="stylesheet">
+  <link href="bootstrap-theme.css" rel="stylesheet">
+  <link rel="stylesheet" href="swiper.min.css">
+  <link href="style.css" rel="stylesheet">
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700|Open+Sans:300,400,700" rel="stylesheet">
@@ -56,9 +56,9 @@
                 <ul class="social-links">
                   <li class="label">Join me here</li>
                   <li><a href="https://www.linkedin.com/in/aswanth-anoop-84b702206/"><i class="fa-brands fa-linkedin fa-shake"></i></li>
-                  <li><a href="#"><img src="assets/dribbble.png"></a></li>
-                  <li><a href="#"><img src="assets/twitter.png"></a></li>
-                  <li><a href="#"><img src="assets/github.png"></a></li>
+                  <li><a href="#"><img src="dribbble.png"></a></li>
+                  <li><a href="#"><img src="twitter.png"></a></li>
+                  <li><a href="#"><img src="github.png"></a></li>
                 </ul>
               </div>
             </div>
@@ -205,10 +205,10 @@
             <div class="col-md-12 text-center">
               <h1>Aswanth<br><span>Anoop</span></h1>
               <ul class="social-links">
-                <li><a href="#"><img src="assets/behance.png"></a></li>
-                <li><a href="#"><img src="assets/dribbble.png"></a></li>
-                <li><a href="#"><img src="assets/twitter.png"></a></li>
-                <li><a href="#"><img src="assets/github.png"></a></li>
+                <li><a href="#"><img src="behance.png"></a></li>
+                <li><a href="#"><img src="dribbble.png"></a></li>
+                <li><a href="#"><img src="twitter.png"></a></li>
+                <li><a href="#"><img src="github.png"></a></li>
               </ul>
             </div>
           </div>
