--- a/index.html
+++ b/index.html
@@ -181,6 +181,10 @@
               <h1 class="blue counter">7</h1>
               <h3>Projects</h3>
             </div>
+            <div class="col-md-4 text-center stat-box">
+              <h1 class="blue counter">3,048,465</h1>
+              <h3>LeetCode Rank</h3>
+            </div>
             
           </div>
         </div>
